--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 .jumbotron {
 	padding: 70px 30px 70px 30px;
 	margin: 0px auto;
-	background-color: #364f6b;
+	background-color: #00b7c2;
 	color: floralwhite;
 }
 
@@ -28,3 +28,13 @@
 	margin:0px;
 	color:#222831;
 }
+
+body {
+	padding: 50px 0px 0px 0px;
+	z-index:0;
+}
+
+.navbar-dark {
+	background :#364f6b;
+}
+
