--- a/css/styles.css
+++ b/css/styles.css
@@ -35,10 +35,26 @@ body {
 }
 
 .navbar-dark {
-	background :#364f6b;
+	background :#16213e;
 }
 
 .tab-content {
 	border-bottom: 1px solid #ddd;
 	padding: 10px;
+}
+
+
+.carousel {
+	background: #364f6b;
+}
+
+.carousel-item {
+	height:300px;
+}
+
+.carousel-item img {
+	position :absolute;
+	top:0;
+	left:0;
+	min-height :300px;
 }
